ebuy-ssr/apps/checkout/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: checkout
 namespace: default
 labels:
  app: checkout
spec:
 replicas: 1
 selector:
  matchLabels:
    app: checkout
 template:
  metadata:
 labels:
    app: checkout
 spec:
 containers:
  - name: checkout
  image: <dockerUserID>/ebuy-checkout:latest
  imagePullPolicy: Always
  ports:
    - name: http
    containerPort: 3000
    protocol: TCP
